--- a/new-client/app/animations.css
+++ b/new-client/app/animations.css
@@ -81,11 +81,16 @@
     transform-style: preserve-3d;
     will-change: transform;
     transform: perspective(900px) rotateX(var(--rx)) rotateY(var(--ry));
-    transition: transform 520ms cubic-bezier(0.16, 1, 0.3, 1);
+    transition: transform 900ms cubic-bezier(0.16, 1, 0.3, 1);
   }
 
   .parallax-card[data-hover="true"] {
-    transition-duration: 120ms;
+    transition-duration: 180ms;
+  }
+
+  .parallax-card[data-hover="false"] {
+    transition-duration: 1000ms;
+    transition-timing-function: cubic-bezier(0.2, 1, 0.2, 1);
   }
 
   .parallax-card:hover {
