--- a/new-client/app/globals.css
+++ b/new-client/app/globals.css
@@ -1,5 +1,5 @@
 @import 'tailwindcss';
-/*@import 'tw-animate-css'; */
+@import 'tw-animate-css';
 @import './animations.css';
 
 /* KaTeX styles for math rendering */
